# DITCamera

./: .gitignore  .gitmodules  Advisement_after _code_review.md  CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  CameraSpec.spe  DITCameraTest.cpp  DITCameraTestApp.cpp  README.md  algorithm_test.cpp  launch.bat  launch.sh
str/: DITAlgorithm.cpp  DITAlgorithm.hpp  DITAlgorithms.hpp  DITConfig.cpp  DITConfig.hpp  algorithmDispatcher.cpp  algorithmDispatcher.hpp  algorithm_dispatcher.cpp  algorithm_dispatcher.hpp  algorithm_loading_header.hpp  configLoader.cpp  configLoader.hpp  config_loader.cpp  config_loader.hpp  config_object.cpp  config_object.hpp  exception.hpp  logger.cpp  logger.hpp  reporter.cpp  reporter.hpp
str/algorithm/: algorithm_base.cpp  algorithm_base.hpp  blemish.cpp  blemish.hpp  blemishPixel.cpp  blemishPixel.hpp  blemishStat.cpp  blemishStat.hpp  flare.cpp  flare.hpp  shading.cpp  shading.hpp
str/method/: blemish.cpp  blemish.hpp  blemishPixel.cpp  blemishPixel.hpp  blemishStat.cpp  blemishStat.hpp  flare.cpp  flare.hpp  shading.cpp  shading.hpp
str/tool/: displayer.cpp  displayer.hpp  json_extension.cpp  json_extension.hpp
